tests/snapshots/fixtures__removed-node.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: LegacyProfile
  reason: node was removed
  before: Struct
stderr:
